[24-09-01] get 과 post 변경 처리

--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -29,17 +29,20 @@
     border-radius: 4px;
 }
 
-.button {
-    background-color: white;
-    border: none;
+.searchButton {
+    background-color: #0056b3;
     cursor: pointer;
     margin-left: 10px;
+    padding: 10px 20px;
+    color: white;
+    border: none;
+    border-radius: 4px;
 }
 
 .resetButton {
     padding: 10px 20px;
     margin-left: 10px;
-    background-color: #007bff;
+    background-color: red;
     color: white;
     border: none;
     border-radius: 4px;
