[24-09-02] 모달창 위치 체크

--- a/src/styles/LoginModal.module.css
+++ b/src/styles/LoginModal.module.css
@@ -1,7 +1,7 @@
 .modalOverlay {
     position: fixed;
-    top: 0;
     left: 0;
+    bottom: 400px;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -9,14 +9,19 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    overflow: hidden;
 }
 
 .modal {
-    background: white;
+    background: #ffffff;
     padding: 20px;
     border-radius: 8px;
-    width: 300px;
+    width: 400px;
+    height:200px;
+    max-width: 90%;
     text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0;
 }
 
 .buttons {
