--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  max-width: 100vw;
+  /*overflow-x: hidden; TODO : 일단 지워보지만 문제 생길 수 있음*/
   box-sizing: border-box;
   font-family:
     'Noto Sans KR',
