--- a/src/styles/DataLoading.module.css
+++ b/src/styles/DataLoading.module.css
@@ -2,7 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 50vh;
+    width:50vw;
+    top:0;
+    left:0;
 }
 
 .spinner {
