--- a/src/styles/TravelDetail.module.css
+++ b/src/styles/TravelDetail.module.css
@@ -54,8 +54,8 @@
 
 .buttonContainer {
     display: flex;
-    justify-content: center; /* 중앙 정렬 */
-    gap: 300px; /* 버튼 간격 */
+    justify-content: center;
+    gap: 300px;
     margin-top: 100px;
 }
 
@@ -237,4 +237,91 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+@media (max-width: 1024px) {
+    .topSection {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .leftSection, .rightSection {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .buttonContainer {
+        gap: 100px;
+        margin-top: 50px;
+    }
+
+    .backBtn, .ChooseBtn, .bookmarkBtn {
+        width: 100px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .detailSliderImg {
+        margin-left: 0;
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .topSection {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .leftSection, .rightSection {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .buttonContainer {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        margin-top: 30px;
+    }
+
+    .backBtn, .ChooseBtn, .bookmarkBtn {
+        width: 90px;
+        height: 35px;
+        font-size: 12px;
+    }
+
+    .chooseRecomend {
+        margin-left: 20px;
+        font-size: 5vw;
+    }
+
+    .detailSliderImg {
+        margin-left: 0;
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .buttonContainer {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        margin-top: 20px;
+    }
+
+    .backBtn, .ChooseBtn, .bookmarkBtn {
+        width: 80px;
+        height: 30px;
+        font-size: 11px;
+    }
+
+    .chooseRecomend {
+        margin-left: 10px;
+        font-size: 6vw;
+    }
+
+    .country, .city, .district, .placeName, .address, .description {
+        font-size: 16px;
+    }
 }
