--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -44,9 +44,12 @@
     color: white;
 }
 
-.resetButton:hover,
 .searchButton:hover {
-    background-color: #003d82;
+    background-color: #004494;
+}
+
+.resetButton:hover {
+    background-color: #b30000;
 }
 
 .placeList {
@@ -160,6 +163,35 @@
     width: 50%;
     padding: 20px;
     height: auto;
+}
+
+.headerContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.travelSearch {
+    margin: 0;
+    text-align: left;
+    flex: 1;
+}
+
+.mylocation {
+    margin: 0;
+    text-align: right;
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.mylocation:hover {
+    background-color: #45a049;
 }
 
 @media (max-width: 1200px) {
