--- a/src/styles/LoginModal.module.css
+++ b/src/styles/LoginModal.module.css
@@ -1,49 +1,49 @@
 .modalOverlay {
-    position: fixed;
-    left: 0;
-    bottom: 400px;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    overflow: hidden;
+  position: fixed;
+  left: 0;
+  bottom: 400px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  overflow: hidden;
 }
 
 .modal {
-    background: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 400px;
-    height:200px;
-    max-width: 90%;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 0;
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  height: 200px;
+  max-width: 90%;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 0;
 }
 
 .buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
 .confirmButton {
-    background-color: #4CAF50;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: #4caf50;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .cancelButton {
-    background-color: #f44336;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: #f44336;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
