--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -199,8 +199,8 @@
   border-radius: 5px;
   cursor: pointer;
   transition:
-    background-color 0.3s,
-    transform 0.3s;
+          background-color 0.3s,
+          transform 0.3s;
 }
 
 .contentBtn:hover {
@@ -246,6 +246,17 @@
 
 .mylocation:hover {
   background-color: #45a049;
+}
+
+.noResults {
+  color: #555;
+  font-size: 16px;
+  text-align: center;
+  margin: 20px 0;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 1200px) {
@@ -541,8 +552,8 @@
   margin-left: 41px;
   color: #555;
   font-family:
-    Noto Sans KR,
-    sans-serif;
+          Noto Sans KR,
+          sans-serif;
   font-size: 25px;
   font-style: normal;
   font-weight: 700;
