--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -146,7 +146,7 @@
 }
 
 .noImage {
-  margin-top:35px;
+  margin-top: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -201,8 +201,8 @@
   border-radius: 5px;
   cursor: pointer;
   transition:
-          background-color 0.3s,
-          transform 0.3s;
+    background-color 0.3s,
+    transform 0.3s;
 }
 
 .contentBtn:hover {
@@ -278,14 +278,15 @@
   padding: 0;
 }
 
-.travelSearch,.travelSearchDetail {
+.travelSearch,
+.travelSearchDetail {
   font-size: 28px;
   font-weight: bold;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
 .travelSearchDetail {
-  margin-top:30px;
+  margin-top: 30px;
   text-align: center;
 }
 
@@ -294,7 +295,6 @@
   flex-wrap: wrap;
   gap: 20px;
   width: 100%;
-  height:883px;
 }
 
 .leftSection {
@@ -306,7 +306,7 @@
 .rightSection {
   flex: 1;
   min-width: 300px;
-  height: 50vh;
+  height:auto;
   justify-content: center;
   width: 50%;
   padding: 20px;
@@ -314,7 +314,7 @@
   flex-direction: column;
   gap: 10px;
   box-sizing: border-box;
-  margin-top:300px;
+  margin-top: 0;
 }
 
 .country,
@@ -360,8 +360,9 @@
 .buttonContainer {
   display: flex;
   justify-content: center;
-  gap:150px;
-  margin-left:20px;
+  gap: 150px;
+  margin-left: 20px;
+  width:100%;
 }
 
 .backBtn,
@@ -491,8 +492,8 @@
   text-align: center;
   color: #999;
   font-size: 18px;
-  height:500px;
-  width:100%;
+  height: 500px;
+  width: 100%;
   margin: 0;
 }
 
