--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   max-width: 100vw;
   /*overflow-x: hidden; TODO : 일단 지워보지만 문제 생길 수 있음*/
   box-sizing: border-box;
