--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -56,6 +56,20 @@
   height: 100%;
 }
 
+.container::before {
+  content: '';
+  position: absolute;
+  width: 80%;
+  max-width: 1455px;
+  height: 601px;
+  border-radius: 0 0 0 200px;
+  background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
+  top: 0;
+  left: 61.8%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
 .listContainer {
   width: 50%;
   padding: 20px;
@@ -77,31 +91,14 @@
   min-width: 100px;
 }
 
-.searchButton,
-.resetButton {
+.searchButton {
+  background-color: #76adac;
+  color: #ffffff;
   padding: 10px 20px;
   margin-left: 5px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-}
-
-.searchButton {
-  background-color: #0056b3;
-  color: white;
-}
-
-.resetButton {
-  background-color: red;
-  color: white;
-}
-
-.searchButton:hover {
-  background-color: #004494;
-}
-
-.resetButton:hover {
-  background-color: #b30000;
 }
 
 .placeList {
@@ -161,6 +158,7 @@
 }
 
 .placeInfo {
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -177,6 +175,15 @@
   margin: 2px 0;
   color: #555;
   font-size: 14px;
+}
+
+.bookmarkButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 .timeAndDistance {
@@ -306,7 +313,7 @@
 .rightSection {
   flex: 1;
   min-width: 300px;
-  height:auto;
+  height: auto;
   justify-content: center;
   width: 50%;
   padding: 20px;
@@ -362,7 +369,7 @@
   justify-content: center;
   gap: 150px;
   margin-left: 20px;
-  width:100%;
+  width: 100%;
 }
 
 .backBtn,
@@ -592,8 +599,7 @@
     margin-bottom: 10px;
   }
 
-  .searchButton,
-  .resetButton {
+  .searchButton {
     width: 100%;
   }
 
