--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -103,3 +103,53 @@ body::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
+
+/* 캘린더 글로벌 적용 */
+.react-datepicker {
+  border:none!important;
+}
+
+.react-datepicker__header {
+  background-color: transparent!important;
+  border-bottom: none!important;
+}
+
+.react-datepicker__day-name:nth-child(1) {
+  color: red!important;
+}
+
+.react-datepicker__day-name:nth-child(7) {
+  color: blue!important;
+}
+
+.react-datepicker__day--in-range {
+  background-color: #EDF9F7 !important;
+  color: black !important;
+  border-radius: 0 !important;
+  border-left: none !important;
+  border-right: none !important;
+}
+
+.react-datepicker__day--range-start:not(.react-datepicker__day--range-end) {
+  border-radius: 50% !important;
+  border: 2px solid #76ADAC !important;
+}
+
+.react-datepicker__day--range-end:not(.react-datepicker__day--range-start) {
+  border-radius: 50% !important;
+  border: 2px solid #76ADAC !important;
+}
+
+.react-datepicker__day--range-start {
+  background-color: #76ADAC !important;
+  color: #ffffff !important;
+  border-radius: 50% !important;
+  border: 2px solid #76ADAC !important;
+}
+
+.react-datepicker__day--range-end {
+  background-color: #76ADAC !important;
+  color: #ffffff !important;
+  border-radius: 50% !important;
+  border: 2px solid #76ADAC !important;
+}
