--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -1,11 +1,52 @@
+/* 일정 만들기 1/3 분할 */
+.layoutContainer {
+    display: flex;
+    width:100%;
+    height: 100%;
+}
+
+.layoutContainer::before {
+    content: '';
+    position: absolute;
+    width: 80%;
+    max-width: 1455px;
+    height: 601px;
+    border-radius: 0 0 0 200px;
+    background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
+    top: 0;
+    left: 61.8%;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
+.leftSection, .centerSection, .rightSection {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.leftSection {
+    background-color: #ffffff;
+}
+
+.centerSection {
+    background-color: #ffffff;
+}
+
+.rightSection {
+    background-color:#ffffff;
+}
+
 /* 일정 만들기를 위한 모달창 */
 .modalOverlay {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 어두운 배경 */
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.0);*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,4 +134,362 @@
 
 .confirmButton:hover {
     background-color: #76ADAC;
+}
+
+/* 일정만들기 1번 : 일정 기본 틀 */
+.pageContainer {
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+}
+
+.tabContainer {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.tabButton {
+    display: flex;
+    width: 240px;
+    height: 60px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-shrink: 0;
+    color: #848282;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background-color: #ffffff;
+    border: 1px solid #848282;
+    border-bottom: 3px solid #76adac;
+    cursor: pointer;
+}
+
+.tabButton.activeTab {
+    border: 3px solid #76adac;
+    border-bottom: none;
+    color: #000;
+}
+
+.tabButton:hover {
+    border: 3px solid #76adac;
+    color: #000;
+}
+
+.inputGroup {
+    margin-bottom: 20px;
+    width: 480px;
+}
+
+.input {
+    padding: 12px;
+    width: 480px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+.errorText {
+    color: red;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+.submitButton {
+    margin-top: 18px;
+    width: 480px;
+    border: none;
+    border-radius: 5px;
+    background-color: #76adac;
+    cursor: pointer;
+    display: flex;
+    height: 60px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    flex-shrink: 0;
+    color: #fff;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.submitButton:hover {
+    background-color: #4d7f7d;
+}
+
+.hrStyle {
+    width: 445px;
+    height: 1px;
+    background-color: #848282;
+    border: none;
+}
+
+.completeText {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 445px;
+    height: 60px;
+    flex-direction: row;
+    flex-shrink: 0;
+    color: #333;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-right: 50px;
+}
+
+.alert {
+    margin-top: 20px;
+    padding: 15px;
+    width: 480px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.alertSuccess {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alertError {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+.hint {
+    display: flex;
+    width: 480px;
+    height: 38px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #555;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.submitButton.disabledButton {
+    background-color: #ccc;
+    cursor: not-allowed;
+    color: #ffffff;
+}
+
+.submitButton.disabledButton:hover {
+    background-color: #ccc;
+}
+
+.userIdText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    text-align: center;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.userIdExplain {
+    color: #848282;
+    font-family: Noto Sans KR,
+    sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+/* 일정만들기 3번 : 채팅 */
+.chatContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    background-color: #f7f7f7;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.chatTitle {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.plusButton {
+    background-color: #76adac;
+    color: #ffffff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.plusButton:hover {
+    background-color: #4d7f7d;
+}
+
+.centerContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.inviteButton {
+    background-color: #76adac;
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.inviteButton:hover {
+    background-color: #4d7f7d;
+}
+
+.messageContainer {
+    flex-grow: 1;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow-y: auto;
+}
+
+.message {
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    max-width: 60%;
+}
+
+.inputContainer {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #ccc;
+}
+
+.messageInput {
+    flex-grow: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-right: 10px;
+}
+
+.sendButton {
+    background-color: #76adac;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.sendButton:hover {
+    background-color: #4d7f7d;
+}
+
+.userList {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+.userList li {
+    margin: 10px 0;
+}
+
+.confirmButton {
+    background-color: #76adac;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.confirmButton:hover {
+    background-color: #4d7f7d;
+}
+
+.closeButton {
+    padding: 10px 20px;
+    background-color: #ccc;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.closeButton:hover {
+    background-color: #999;
+}
+
+.chattingModalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.chattingModalContainer {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    text-align: center;
 }
