--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -446,6 +446,26 @@
     margin: 10px 0;
 }
 
+.linkContainer {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.copyButton {
+    background-color: #76adac;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.copyButton:hover {
+    background-color: #4d7f7d;
+}
+
 .confirmButton {
     background-color: #76adac;
     color: white;
@@ -492,4 +512,19 @@
     border-radius: 10px;
     width: 400px;
     text-align: center;
+}
+
+.chattingModalContainer h3 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.linkContainer label {
+    display: flex;
+    align-items: center;
+}
+
+.linkContainer input[type="radio"] {
+    margin-right: 10px;
 }
