--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -83,6 +83,7 @@
 }
 
 .input {
+    background-color:#ffffff;
     padding: 10px;
     margin: 5px 5px 5px 0;
     border: 1px solid #ccc;
@@ -439,11 +440,19 @@
     margin-left: 15px;
 }
 
+.sliderImageContainer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-color: #f0f0f0;
+}
+
 .sliderImageContainer img {
-    width: 749px;
-    height: 512px;
-    object-fit: cover;
-    border-radius: 8px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .sliderButton {
