일정 만들기 : 최근 목록 추가

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,24 +106,24 @@ body::-webkit-scrollbar {
 
 /* 캘린더 글로벌 적용 */
 .react-datepicker {
-  border:none!important;
+  border: none !important;
 }
 
 .react-datepicker__header {
-  background-color: transparent!important;
-  border-bottom: none!important;
+  background-color: transparent !important;
+  border-bottom: none !important;
 }
 
 .react-datepicker__day-name:nth-child(1) {
-  color: red!important;
+  color: red !important;
 }
 
 .react-datepicker__day-name:nth-child(7) {
-  color: blue!important;
+  color: blue !important;
 }
 
 .react-datepicker__day--in-range {
-  background-color: #EDF9F7 !important;
+  background-color: #edf9f7 !important;
   color: black !important;
   border-radius: 0 !important;
   border-left: none !important;
@@ -132,24 +132,24 @@ body::-webkit-scrollbar {
 
 .react-datepicker__day--range-start:not(.react-datepicker__day--range-end) {
   border-radius: 50% !important;
-  border: 2px solid #76ADAC !important;
+  border: 2px solid #76adac !important;
 }
 
 .react-datepicker__day--range-end:not(.react-datepicker__day--range-start) {
   border-radius: 50% !important;
-  border: 2px solid #76ADAC !important;
+  border: 2px solid #76adac !important;
 }
 
 .react-datepicker__day--range-start {
-  background-color: #76ADAC !important;
+  background-color: #76adac !important;
   color: #ffffff !important;
   border-radius: 50% !important;
-  border: 2px solid #76ADAC !important;
+  border: 2px solid #76adac !important;
 }
 
 .react-datepicker__day--range-end {
-  background-color: #76ADAC !important;
+  background-color: #76adac !important;
   color: #ffffff !important;
   border-radius: 50% !important;
-  border: 2px solid #76ADAC !important;
+  border: 2px solid #76adac !important;
 }
