--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -569,6 +569,15 @@
   font-size: 18px;
 }
 
+.deleteZone {
+  margin-left:40%;
+  margin-top:100px;
+  width:120px;
+  height:30px;
+  color:#ffffff;
+  background-color:#004a55;
+}
+
 .placeInfo {
   position: relative;
   flex: 1;
@@ -841,6 +850,8 @@
 }
 
 .closeButton {
+  width:15px;
+  height:15px;
   position: absolute;
   background: none;
   border: none;
