--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -164,21 +164,6 @@
   flex-direction: column;
 }
 
-.country,
-.city,
-.district,
-.placeName,
-.detailplaceName,
-.address,
-.description {
-  margin-left: 30px;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 20px;
-  color: #333;
-  line-height: 1.6;
-  font-weight: bold;
-}
-
 .placeName {
   font-size: 18px;
   font-weight: bold;
@@ -302,7 +287,6 @@
 }
 
 .topSection {
-  border: 1px solid #f0f0f0;
   margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
@@ -317,88 +301,14 @@
   flex-direction: column;
 }
 
-.countryCityDistrict {
-  margin-left: 30px;
-  margin-bottom: 50px;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-  color: #666;
-}
-
-.addressLabel,
-.homepageLabel,
-.phoneLabel,
-.useTimeLabel,
-.checkInOutLabel {
-  display: flex;
-  align-items: center;
-  margin-left: 30px;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 16px;
-  color: #555;
-  line-height: 2.6em;
-  gap: 10px;
-}
-
-.homepageLabel p,
-.addressLabel p,
-.phoneLabel p,
-.useTimeLabel p,
-.checkInOutLabel p {
-  margin: 0;
-}
-
-.useTimeIcon,
-.checkInOutIcon,
-.homepageLabel img,
-.phoneLabel img,
-.addressLabel img {
-  width: 20px;
-  height: 20px;
-  flex-shrink: 0;
-}
-
-.buttonContainer {
-  display: flex;
-  gap: 20px;
-  margin-top: 120px;
-  justify-content: center;
-  align-items: center;
-}
-
-.chooseBtn,
-.bookmarkBtn {
-  width: 300px;
-  height: 55px;
-  border-radius: 5px;
-  border: none;
-  color: #ffffff;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 16px;
-  cursor: pointer;
-  transition: all 0.3s;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  justify-content: center;
-  align-items: center;
-}
-
-.chooseBtn {
-  background-color: #76adac;
-}
-
-.bookmarkBtn {
-  background-color: #74a5da;
-}
-
 .infoSection {
   background-color: #f3f8f8;
   padding: 20px;
   border-radius: 8px;
   width: fit-content;
-  max-width: 1501px;
+  max-width: 1465px;
   height: auto;
-  margin: 20px;
+  margin-left: 10.5%;
 }
 
 .infoText {
@@ -437,21 +347,26 @@
   line-height: normal;
   font-family: 'Noto Sans KR', sans-serif;
   margin-bottom: 20px;
-  margin-left: 15px;
+  margin-left: 10.5%;
+}
+
+.detailTitleIcon {
+  width: 36px;
+  height: 27px;
+  flex-shrink: 0;
+  margin-right: 10px;
 }
 
 .sliderImageContainer {
   width: 100%;
-  height: auto;
+  height: 505px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-color: #f0f0f0;
 }
 
 .sliderImageContainer img {
-  width: 749px;
   object-fit: contain !important;
   aspect-ratio: 3 / 2 !important;
 }
@@ -508,32 +423,6 @@
 .expandButton:hover {
   color: #0056b3;
   text-decoration: underline;
-}
-
-.chooseBtn,
-.bookmarkBtn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  width: 300px;
-  height: 55px;
-  border-radius: 5px;
-  border: none;
-  color: #ffffff;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 16px;
-  cursor: pointer;
-  transition: all 0.3s;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.bookmarkBtn {
-  background-color: #74a5da;
-}
-
-.chooseBtn {
-  background-color: #76adac;
 }
 
 .recommendedDestinations {
@@ -635,30 +524,109 @@
   color: #0070f3;
 }
 
-.homepageLabel,
-.homepageText {
-  color: #0070f3;
+.rightSection {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  max-width: 749px;
+  height: 512px;
+  margin: 0 auto;
+}
+
+.countryCityDistrict {
+  color: #636363;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 10px;
   font-family: 'Noto Sans KR', sans-serif;
-  font-size: 16px;
-  font-weight: bold;
 }
 
-.homepageText {
-  color: #575757;
+.detailplaceName {
+  color: #000;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 15px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
+.addressLabel,
 .useTimeLabel,
-.checkInOutLabel {
+.homepageLabel,
+.phoneLabel {
   display: flex;
   align-items: center;
-  margin-left: 30px;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 16px;
-  color: #555;
-  line-height: 2.6em;
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #2d2d2d;
+  font-weight: 505;
 }
 
-.useTimeIcon,
-.checkInOutIcon {
-  margin-right: 10px;
+.addressLabel img,
+.useTimeLabel img,
+.homepageLabel img,
+.phoneLabel img {
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  object-fit: contain;
+}
+
+.addressLabel p,
+.useTimeLabel p,
+.homepageLabel p,
+.phoneLabel p {
+  width: 150px;
+  height: 25px;
+}
+
+.homepageLabel a {
+  color: #00f;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  text-decoration: none;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
+.buttonContainer {
+  display: flex;
+  margin-top: 20px;
+}
+
+.bookmarkBtn,
+.chooseBtn {
+  width: 300px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'Noto Sans KR', sans-serif;
+  gap: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.bookmarkBtn {
+  background-color: #74a5da;
+  color: #ffffff;
+  transition: background-color 0.3s ease;
+}
+
+.chooseBtn {
+  background-color: #76adac;
+  color: #ffffff;
+  transition: background-color 0.3s ease;
 }
